--- a/.htaccess
+++ b/.htaccess
@@ -1,48 +1,11 @@
 Options All -Indexes
 
-# compress html, javascript, css, xml using PHP?:
-# the gzip php request is in each file
-<ifModule mod_fcgid.c>
-AddHandler fcgid-script .html .htm .css .js
-FcgidWrapper "/dh/cgi-system/php53.cgi" .html
-FcgidWrapper "/dh/cgi-system/php53.cgi" .htm
-FcgidWrapper "/dh/cgi-system/php53.cgi" .css
-FcgidWrapper "/dh/cgi-system/php53.cgi" .js
-</ifModule>
+# BEGIN: http://wiki.dreamhost.com/Htaccess_tricks#Faster_page_loading
 
-# BEGIN Expire headers
-<ifModule mod_expires.c>
-  ExpiresActive On
-  ExpiresDefault "access plus 5 seconds"
-  ExpiresByType image/x-icon "access plus 2592000 seconds"
-  ExpiresByType image/jpeg "access plus 2592000 seconds"
-  ExpiresByType image/png "access plus 2592000 seconds"
-  ExpiresByType image/gif "access plus 2592000 seconds"
-  ExpiresByType application/x-shockwave-flash "access plus 2592000 seconds"
-  ExpiresByType text/css "access plus 604800 seconds"
-  ExpiresByType text/javascript "access plus 216000 seconds"
-  ExpiresByType application/javascript "access plus 216000 seconds"
-  ExpiresByType application/x-javascript "access plus 216000 seconds"
-  ExpiresByType text/html "access plus 600 seconds"
-  ExpiresByType application/xhtml+xml "access plus 600 seconds"
-</ifModule>
-# END Expire headers
+# BEGIN: Gzip
+<ifmodule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/text text/html text/plain text/xml text/css application/x-javascript application/javascript text/javascript image/svg+xml
+</ifmodule>
+# END: Gzip
 
-# BEGIN Cache-Control Headers
-<ifModule mod_headers.c>
-  <filesMatch "\.(ico|jpe?g|png|gif|swf)$">
-    Header set Cache-Control "public"
-  </filesMatch>
-  <filesMatch "\.(css)$">
-    Header set Cache-Control "public"
-  </filesMatch>
-  <filesMatch "\.(js)$">
-    Header set Cache-Control "private"
-  </filesMatch>
-  <filesMatch "\.(x?html?|php)$">
-    Header set Cache-Control "private, must-revalidate"
-  </filesMatch>
-</ifModule>
-# END Cache-Control Headers
-
-
+# END: http://wiki.dreamhost.com/Htaccess_tricks#Faster_page_loading
