installed monolog via composer

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
 	"version": "2.2.2",
-	"name": "cxelegance/website"
+	"name": "cxelegance/website",
+	"require": {
+        "monolog/monolog": "1.0.*"
+    }
 }
