restore the versioning and name to composer.json

--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,7 @@
 	},
 	"jesseNotes": {
 		"pushApp": "git push <remote, e.g heroku> <local branch name>:<remote branch name, e.g. master>"
-	}
+	},
+	"version": "2.2.2",
+	"name": "cxelegance/website"
 }
