--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	},
 	"jesseNotes": {
 		"pushApp": "git push <remote, e.g heroku> <local branch name>:<remote branch name, e.g. master>"
+		"altPushApp": "git push --set-upstream https://git.heroku.com/<insert Heroku app name here.git> <local branch name>:<remote branch name, e.g. master>"
 	},
 	"version": "2.2.2",
 	"name": "cxelegance/website"
