--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,5 @@
 	"name": "cxelegance/cxelegance",
 	"description": "This is the website for cxelegance.com.",
 	"type": "project",
-	"homepage": "cxelegance.com"
+	"homepage": "http://cxelegance.com"
 }
